pkg/ibmvpc/examples/sg_testing1_new_all_vpcs_subnetsBased_withPGW.txt
Connectivity for VPC test-vpc1-ky
combined connections between subnets:
subnet1-ky => Public Internet (all ranges) : All Connections
subnet1-ky => subnet2-ky : All Connections
subnet1-ky => subnet3-ky : All Connections
subnet2-ky => subnet1-ky : All Connections
subnet2-ky => subnet3-ky : All Connections
subnet3-ky => subnet1-ky : All Connections
subnet3-ky => subnet2-ky : All Connections
